@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx 0.9.6.2 (rev 3338)
 ====================================
+* Update IE6 (and earlier) helper files for transparent png support and for adding :hover, :active, :focus support to all elements (not just links/inputs)
 * [FS#905] sqlParser.class.php now typecasting (float) instead of floatval() [PHP < 4.2] (3338)
 * Updated rss.inc.php to handle 404 errors if the feeds cannot be found (3317)
 * [FS#947] Module permissions did not handle multiple user groups (3314)
